--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "input-otp": "1.4.1",
     "kerberos": "latest",
     "lucide-react": "^0.454.0",
+    "luxon": "^3.6.1",
     "mongodb": "latest",
     "mongodb-client-encryption": "latest",
     "next": "14.2.16",
