--- a/package.json
+++ b/package.json
@@ -55,10 +55,12 @@
     "next": "14.2.16",
     "next-themes": "^0.4.4",
     "react": "^18",
+    "react-calendar": "^6.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^18",
     "react-hook-form": "^7.54.1",
     "react-resizable-panels": "^2.1.7",
+    "react-to-print": "^3.1.0",
     "recharts": "2.15.0",
     "snappy": "latest",
     "socks": "latest",
